Changed YAML data and adapted controllers
