# swagger_server/controllers/movie_controller.py
@@ -6,6 +6,7 @@ from swagger_server import util
 
 from swagger_server.data.movies_data import movies_data
 
+
 def movie_get_by_id(movie_id):  # noqa: E501
     """Get movie information by given movie id
 
@@ -17,12 +18,12 @@ def movie_get_by_id(movie_id):  # noqa: E501
     :rtype: Movie
     """
 
-    movie_found = False
-    for movie in movies_data:
-        if movie["movie_id"] == movie_id:
-            movie_found = movie
+    if movie_id != "":
+        for movie in movies_data:
+            if movie["movie_id"] == movie_id:
+                return movie
 
-    return movie_found
+    return False
 
 
 def movies_search(keyword=None, limit=None):  # noqa: E501
@@ -37,6 +38,7 @@ def movies_search(keyword=None, limit=None):  # noqa: E501
 
     :rtype: List[Movie]
     """
+
     movies = []
     index = 0
 
